improvement: add placeholder to Avatar and fix issues
* added placeholder image rendered between initials and primary img
* show initials behind images
* fix avatar layout issues
* add example to docs for placeholder

--- a/src/components/Avatar/Avatar.sass
+++ b/src/components/Avatar/Avatar.sass
@@ -36,5 +36,11 @@
 		&.Avatar_Initials__BackgroundPurple
 			background-color: $purple
 
-	.Avatar_Image__Hidden
-		opacity: 0
+	.Avatar_Image
+		&.Avatar_Image__PositionAbsolute
+			position: absolute
+			left: 0
+			top: 0
+
+		&.Avatar_Image__Hidden
+			opacity: 0
