--- a/src/components/VerticalNav/VerticalNav.sass
+++ b/src/components/VerticalNav/VerticalNav.sass
@@ -114,13 +114,25 @@
 	.WorkspaceSwitcher_PopupGridItem
 		cursor: pointer
 
-	.WorkspaceSwitcher_PopupGridItem__Active
-		margin: -4px 0 0 -4px
-		border: 4px solid $green
-		border-radius: 8px
+		&::after
+			content: ''
+			position: absolute
+			top: 0
+			right: 0
+			bottom: 0
+			left: 0
+			margin: -2px
+			border: 2px solid $gray15
+			border-radius: 8px
 
-		&.WorkspaceSwitcher_PopupGridItem__Team
+		&.WorkspaceSwitcher_PopupGridItem__Team::after
 			border-radius: 50%
+
+	.WorkspaceSwitcher_PopupGridItem__Active
+		&::after
+			margin: -2px
+			border: 4px solid $green
+			border-radius: 8px
 
 	.WorkspaceSwitcher_PopupGridItemAdd
 		display: flex
@@ -146,3 +158,6 @@
 
 		& + button
 			margin-top: 10px
+
+	.WorkspaceSwitcher_Avatar img
+		background: $white
